fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "právě prohlíží",
   "previously edited": "dříve upraveno",
   "You": "Vy",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Prohlížející",
   "Collections are used to group documents and choose permissions": "Kolekce se používají pro seskupení dokumentů a volbu spojených oprávnění",
   "Name": "Jméno",
@@ -205,6 +206,7 @@
   "Move document": "Přesunout dokument",
   "Moving": "Přesouvání",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Přesunutím dokumentu <em>{{ title }}</em> do sbírky {{ newCollectionName }} se změní oprávnění pro všechny členy pracovního prostoru z <em>{{ prevPermission }}</em> na <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Podmenu",
   "Collections could not be loaded, please reload the app": "Sbírky se nepodařilo načíst, prosím načtěte aplikaci znovu",
   "Start view": "Domovská obrazovka",
@@ -329,6 +331,7 @@
   "Mark all as read": "Označit vše jako přečtené",
   "You're all caught up": "Již nic nového",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "My App",
   "Tagline": "Tagline",
   "A short description": "A short description",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} skupin bylo přidáno do dokumentu",
   "{{ count }} groups added to the document_plural": "{{ count }} skupin bylo přidáno do dokumentu",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Archivované sbírky",
   "New doc": "Nový dokument",
   "Empty": "Prázdné",
   "Collapse": "Sbalit",
   "Expand": "Rozbalit",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument není podporován – zkuste Markdown, Plain text, HTML nebo Word",
+  "Import files": "Import files",
   "Go back": "Jít zpět",
   "Go forward": "Jít vpřed",
   "Could not load shared documents": "Sdílené dokumenty nelze načíst",
@@ -460,6 +466,8 @@
   "Replacement": "Náhrada",
   "Replace": "Nahradit",
   "Replace all": "Nahradit vše",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Profilový obrázek",
   "Create a new doc": "Vytvořit nový dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Vytvořit nový podřazený dokument",
   "Delete table": "Odstranit tabulku",
   "Delete file": "Smazat soubor",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Stáhnout soubor",
   "Replace file": "Nahradit soubor",
   "Delete image": "Odstranit obrázek",
@@ -680,6 +689,7 @@
   "only you": "pouze vy",
   "person": "osoba",
   "people": "lidé",
+  "Document title": "Document title",
   "Last updated": "Naposledy aktualizováno",
   "Type '/' to insert, or start writing…": "Zadejte '/' pro vložení nebo začněte psát…",
   "Hide contents": "Skrýt obsah",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Tato nastavení ovlivňují způsob, jakým se váš pracovní prostor zobrazuje všem v týmu.",
   "Display": "Zobrazit",
   "The logo is displayed at the top left of the application.": "Logo se zobrazí v levém horním rohu aplikace.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Název pracovního prostoru, obvykle stejný jako název vaší společnosti.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} aktualizoval před {{ timeAgo }}",
   "You created {{ timeAgo }}": "Vytvořili jste před {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} vytvořil před {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
