fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "attualmente visualizzato",
   "previously edited": "precedentemente modificato",
   "You": "Tu",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Visitatori",
   "Collections are used to group documents and choose permissions": "Le raccolte sono usate per raggruppare i documenti e assegnare i permessi",
   "Name": "Nome",
@@ -205,6 +206,7 @@
   "Move document": "Sposta il documento",
   "Moving": "Spostamento",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Spostare il documento <em>{{ title }}</em> alla raccolta {{ newCollectionName }} cambierà i permessi per tutti i membri dello spazio di lavoro da <em>{{ prevPermission }}</em> a <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Sottomenu",
   "Collections could not be loaded, please reload the app": "Impossibile caricare le raccolte, per favore ricarica l'app",
   "Start view": "Schermata iniziale",
@@ -329,6 +331,7 @@
   "Mark all as read": "Contrassegna tutto come letto",
   "You're all caught up": "Sei completamente aggiornato",
   "Icon": "Icona",
+  "OAuth client icon": "OAuth client icon",
   "My App": "La mia App",
   "Tagline": "Slogan",
   "A short description": "Una breve descrizione",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "Gruppi aggiunti al documento",
   "{{ count }} groups added to the document_plural": "Gruppi aggiunti al documento",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Collezioni archiviate",
   "New doc": "Nuovo documento",
   "Empty": "Vuoto",
   "Collapse": "Raggruppa",
   "Expand": "Espandi",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento non supportato – prova Markdown, testo semplice, HTML o Word",
+  "Import files": "Import files",
   "Go back": "Torna indietro",
   "Go forward": "Vai avanti",
   "Could not load shared documents": "Impossibile caricare i documenti condivisi",
@@ -460,6 +466,8 @@
   "Replacement": "Sostituire",
   "Replace": "Sostituisci",
   "Replace all": "Sostituisci tutti",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Immagine del profilo",
   "Create a new doc": "Crea un nuovo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} Non verrà notificato, in quanto Non",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Crea un nuovo documento",
   "Delete table": "Elimina tabella",
   "Delete file": "Cancella file",
-  "Width x Height": "Larghezza x altezza",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Scarica il file",
   "Replace file": "Sostituisci file",
   "Delete image": "Elimina immagine",
@@ -680,6 +689,7 @@
   "only you": "solo tu",
   "person": "persona",
   "people": "persone",
+  "Document title": "Document title",
   "Last updated": "Ultimo aggiornamento",
   "Type '/' to insert, or start writing…": "Digita '/' per inserire, o inizia a scrivere…",
   "Hide contents": "Nascondi contenuti",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "These settings affect the way that your workspace appears to everyone on the team.",
   "Display": "Visualizzazione",
   "The logo is displayed at the top left of the application.": "Il logo viene visualizzato in alto a sinistra dell'applicazione.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Il nome dell'area di lavoro, in genere uguale al nome della tua azienda.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
