fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "閲覧中",
   "previously edited": "編集済み",
   "You": "あなた",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "閲覧者",
   "Collections are used to group documents and choose permissions": "コレクションはドキュメントのグループ化や権限の選択に使用されます。",
   "Name": "名前",
@@ -205,6 +206,7 @@
   "Move document": "ドキュメントを移動",
   "Moving": "移動中",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "ドキュメント <em>{{ title }}</em> を {{ newCollectionName }} コレクションに移動すると、 <em>{{ prevPermission }}</em> から <em>{{ newPermission }}</em> へのすべてのワークスペースメンバーの権限が変更されます。",
+  "More options": "More options",
   "Submenu": "サブメニュー",
   "Collections could not be loaded, please reload the app": "コレクションを読み込めませんでした。アプリを再読み込みしてください。",
   "Start view": "起動時の画面",
@@ -329,6 +331,7 @@
   "Mark all as read": "全て既読にする",
   "You're all caught up": "全て確認済み",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "My App",
   "Tagline": "Tagline",
   "A short description": "A short description",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} グループをドキュメントに追加しました",
   "{{ count }} groups added to the document_plural": "{{ count }} グループをドキュメントに追加しました",
   "Logo": "ロゴ",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "アーカイブされたコレクション",
   "New doc": "ドキュメントを新規作成",
   "Empty": "空",
   "Collapse": "折りたたむ",
   "Expand": "展開",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "ドキュメントはサポートされていません。\nMarkdown、プレーンテキスト、HTML、または Word をお試しください。",
+  "Import files": "Import files",
   "Go back": "戻る",
   "Go forward": "進む",
   "Could not load shared documents": "共有済みのドキュメントを読み込めませんでした",
@@ -460,6 +466,8 @@
   "Replacement": "置換する",
   "Replace": "置換",
   "Replace all": "全て置換",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "プロフィール画像",
   "Create a new doc": "ドキュメントを作成",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} はこのドキュメントへのアクセス権限がないため、通知されません",
@@ -486,7 +494,8 @@
   "Create a new child doc": "ドキュメントを作成",
   "Delete table": "テーブルを削除",
   "Delete file": "ファイルを削除",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "ファイルをダウンロード",
   "Replace file": "ファイルを置換",
   "Delete image": "画像を削除",
@@ -680,6 +689,7 @@
   "only you": "自分のみ",
   "person": "個人",
   "people": "メンバー",
+  "Document title": "Document title",
   "Last updated": "最終更新",
   "Type '/' to insert, or start writing…": "「/」で挿入、または書き込みを開始…",
   "Hide contents": "コンテンツを非表示",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "これらの設定は、ワークスペースがチームの全員にどのように表示されるかに影響します。",
   "Display": "表示",
   "The logo is displayed at the top left of the application.": "アプリの左上にロゴが表示されます。",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "チーム名です。これは通常、会社名と同じです。",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} が {{ timeAgo }} に更新しました",
   "You created {{ timeAgo }}": "あなたが {{ timeAgo }} に作成しました",
   "{{ user }} created {{ timeAgo }}": "{{ user }} が {{ timeAgo }} に作成しました",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "データ読込エラー"
 }
