fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "neste momento a visualizar",
   "previously edited": "Alterado anteriormente",
   "You": "Tu",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Leitores",
   "Collections are used to group documents and choose permissions": "Coleções são usadas para agrupar documentos e escolher permissões",
   "Name": "Nome",
@@ -205,6 +206,7 @@
   "Move document": "Mover documento",
   "Moving": "A mover",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as Coleções, recarregue a aplicação",
   "Start view": "Vista inicial",
@@ -329,6 +331,7 @@
   "Mark all as read": "Marcar todos como lido",
   "You're all caught up": "Já estás a par de tudo",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "My App",
   "Tagline": "Tagline",
   "A short description": "A short description",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} grupo adicionado ao documento",
   "{{ count }} groups added to the document_plural": "{{ count }} grupos adicionados ao documento",
   "Logo": "Logótipo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Archived collections",
   "New doc": "Novo doc",
   "Empty": "Vazio",
   "Collapse": "Fechar",
   "Expand": "Expandir",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento não suportado — tente Markdown, texto simples, HTML ou Word",
+  "Import files": "Import files",
   "Go back": "Voltar",
   "Go forward": "Avançar",
   "Could not load shared documents": "Não foi possível carregar documentos favoritos",
@@ -460,6 +466,8 @@
   "Replacement": "Substituição",
   "Replace": "Substituir",
   "Replace all": "Trocar todos",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Imagem de perfil",
   "Create a new doc": "Criar um novo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Criar novo subdocumento",
   "Delete table": "Eliminar tabela",
   "Delete file": "Eliminar ficheiro",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Transferir ficheiro",
   "Replace file": "Substituir arquivo",
   "Delete image": "Eliminar imagem",
@@ -680,6 +689,7 @@
   "only you": "apenas você",
   "person": "pessoa",
   "people": "pessoas",
+  "Document title": "Document title",
   "Last updated": "Ultima atualização",
   "Type '/' to insert, or start writing…": "Digite '/' para inserir, ou comece a escrever…",
   "Hide contents": "Ocultar conteúdo",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Essas configurações afetam como a sua área de trabalho aparece para todos na equipa.",
   "Display": "Exibição",
   "The logo is displayed at the top left of the application.": "O logotipo é exibido no canto superior esquerdo da aplicação.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "O nome da área de trabalho, geralmente o mesmo que o nome da empresa.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} atualizado à {{ timeAgo }}",
   "You created {{ timeAgo }}": "Criou à {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} criado à {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
