fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "tittar just nu",
   "previously edited": "tidigare redigerad",
   "You": "Du",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Tittare",
   "Collections are used to group documents and choose permissions": "Samlingar används för att gruppera dokument och välja behörigheter",
   "Name": "Namn",
@@ -205,6 +206,7 @@
   "Move document": "&Flytta dokument",
   "Moving": "Flyttar",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Undermeny",
   "Collections could not be loaded, please reload the app": "Samlingarna kunde inte laddas, ladda om appen",
   "Start view": "Startvy",
@@ -329,6 +331,7 @@
   "Mark all as read": "Markera alla som lästa",
   "You're all caught up": "Inga olästa meddelanden",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "My App",
   "Tagline": "Tagline",
   "A short description": "A short description",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} groups added to the document",
   "{{ count }} groups added to the document_plural": "{{ count }} groups added to the document",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Archived collections",
   "New doc": "Nytt dokument",
   "Empty": "Tom",
   "Collapse": "Minimera",
   "Expand": "Expandera",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokumentet stöds inte – prova Markdown, ren text, HTML eller Word",
+  "Import files": "Import files",
   "Go back": "Gå tillbaka",
   "Go forward": "Gå vidare",
   "Could not load shared documents": "Kunde inte ladda delade dokument",
@@ -460,6 +466,8 @@
   "Replacement": "Ersättning",
   "Replace": "Ersätt",
   "Replace all": "Ersätt alla",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Profilbild",
   "Create a new doc": "Skapa nytt dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Skapa ett nytt underordnat dokument",
   "Delete table": "Ta bort tabell",
   "Delete file": "Radera fil",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Ladda ner fil",
   "Replace file": "Ersätt fil",
   "Delete image": "Ta bort bild",
@@ -680,6 +689,7 @@
   "only you": "endast dig",
   "person": "person",
   "people": "människor",
+  "Document title": "Document title",
   "Last updated": "Senast uppdaterad",
   "Type '/' to insert, or start writing…": "Skriv '/' för att infoga eller börja skriva…",
   "Hide contents": "Dölj innehåll",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Dessa inställningar påverkar hur din arbetsyta ser ut för alla i teamet.",
   "Display": "Visa",
   "The logo is displayed at the top left of the application.": "Logotypen visas längst upp till vänster i applikationen.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Namnet på arbetsytan, vanligtvis samma som ditt företagsnamn.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} uppdaterade {{ timeAgo }}",
   "You created {{ timeAgo }}": "Du skapade {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} skapade {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
