fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "şu anda görüntülüyor",
   "previously edited": "önceden düzenlendi",
   "You": "Sen",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Görüntüleyenler",
   "Collections are used to group documents and choose permissions": "Koleksiyonlar, belgeleri gruplayıp izinleri seçmek için kullanılır",
   "Name": "Ad",
@@ -205,6 +206,7 @@
   "Move document": "Belgeyi taşı",
   "Moving": "Taşınıyor",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "<em>{{ title }}</em> belgesini {{ newCollectionName }} koleksiyonuna taşımak, tüm çalışma alanı üyelerinin izinlerini <em>{{ prevPermission }}</em>'dan <em>{{ newPermission }}</em>'a değiştirecektir.",
+  "More options": "More options",
   "Submenu": "Alt menü",
   "Collections could not be loaded, please reload the app": "Koleksiyonlar yüklenemedi, lütfen uygulamayı yeniden yükleyin",
   "Start view": "Görünümü başlat",
@@ -329,6 +331,7 @@
   "Mark all as read": "Tümünü okundu olarak işaretle",
   "You're all caught up": "You're all caught up",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "My App",
   "Tagline": "Tagline",
   "A short description": "A short description",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} groups added to the document",
   "{{ count }} groups added to the document_plural": "{{ count }} groups added to the document",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Archived collections",
   "New doc": "Yeni belge",
   "Empty": "Boş",
   "Collapse": "Daralt",
   "Expand": "Genişlet",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Belge desteklenmiyor - Markdown, Düz Metin, HTML veya Word'ü deneyin",
+  "Import files": "Import files",
   "Go back": "Geri dön",
   "Go forward": "İleri git",
   "Could not load shared documents": "Could not load shared documents",
@@ -460,6 +466,8 @@
   "Replacement": "Replacement",
   "Replace": "Replace",
   "Replace all": "Replace all",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Profil fotoğrafı",
   "Create a new doc": "Yeni bir belge oluştur",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Tabloyu sil",
   "Delete file": "Delete file",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Download file",
   "Replace file": "Replace file",
   "Delete image": "Resmi sil",
@@ -680,6 +689,7 @@
   "only you": "sadece siz",
   "person": "kişi",
   "people": "kişiler",
+  "Document title": "Document title",
   "Last updated": "Son güncelleme",
   "Type '/' to insert, or start writing…": "Eklemek için '/' yazın veya yazmaya başlayın…",
   "Hide contents": "İçeriği gizle",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "These settings affect the way that your workspace appears to everyone on the team.",
   "Display": "Display",
   "The logo is displayed at the top left of the application.": "Logo, uygulamanın sol üst kısmında görüntülenir.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "The workspace name, usually the same as your company name.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
