fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "зараз переглядають",
   "previously edited": "відредаговано раніше",
   "You": "Ви",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Глядачі",
   "Collections are used to group documents and choose permissions": "Колекції використовуються для групування документів та вибору прав доступу",
   "Name": "Назва",
@@ -205,6 +206,7 @@
   "Move document": "Перемістити документ",
   "Moving": "Переміщення",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Переміщення документа <em>{{ title }}</em> до колекції {{ newCollectionName }} призведе до зміни дозволу для всіх учасників робочої області з <em>{{ prevPermission }}</em> на <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Підменю",
   "Collections could not be loaded, please reload the app": "Не вдалося завантажити колекції. Перезавантажте програму",
   "Start view": "Почати перегляд",
@@ -329,6 +331,7 @@
   "Mark all as read": "Позначити все як прочитане",
   "You're all caught up": "У вас все налаштовано",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "My App",
   "Tagline": "Tagline",
   "A short description": "A short description",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} groups added to the document",
   "{{ count }} groups added to the document_plural": "{{ count }} groups added to the document",
   "Logo": "Лого",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Заархівовані колекції",
   "New doc": "Новий документ",
   "Empty": "Порожньо",
   "Collapse": "Згорнути",
   "Expand": "Розгорнути",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Документ не підтримується – спробуйте Markdown, TXT-файл, HTML або Word",
+  "Import files": "Import files",
   "Go back": "Назад",
   "Go forward": "Вперед",
   "Could not load shared documents": "Не вдалося завантажити спільні документи",
@@ -460,6 +466,8 @@
   "Replacement": "Заміна",
   "Replace": "Замінити",
   "Replace all": "Замінити все",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Аватар",
   "Create a new doc": "Створіть новий документ",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} не буде повідомлено, тому що він не має доступу до цього документа",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Видалити таблицю",
   "Delete file": "Delete file",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Download file",
   "Replace file": "Replace file",
   "Delete image": "Видалити зображення",
@@ -680,6 +689,7 @@
   "only you": "лише ви",
   "person": "персона",
   "people": "людина",
+  "Document title": "Document title",
   "Last updated": "Оновлено",
   "Type '/' to insert, or start writing…": "Введіть '/', щоб вставити, або почніть писати…",
   "Hide contents": "Приховати вміст",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "These settings affect the way that your workspace appears to everyone on the team.",
   "Display": "Відобразити",
   "The logo is displayed at the top left of the application.": "Логотип відображається у верхньому лівому кутку програми.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Назва робочого простору, зазвичай, така сама як назва вашої компанії.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} оновив {{ timeAgo }}",
   "You created {{ timeAgo }}": "Ви створили {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} створив {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
