fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "正在浏览",
   "previously edited": "先前已编辑",
   "You": "你",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "浏览者",
   "Collections are used to group documents and choose permissions": "文档集用于对文档进行分组和权限管理",
   "Name": "名称",
@@ -205,6 +206,7 @@
   "Move document": "移动文档",
   "Moving": "移动",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "将文档 <em>{{ title }}</em> 移动到 {{ newCollectionName }} 集合将使所有工作区成员的权限从 <em>{{ prevPermission }}</em> 更改为 <em>{{ newPermission }}</em>。",
+  "More options": "More options",
   "Submenu": "子菜单",
   "Collections could not be loaded, please reload the app": "无法加载文档集，请重新加载应用",
   "Start view": "开始浏览",
@@ -329,6 +331,7 @@
   "Mark all as read": "全部标记为已读",
   "You're all caught up": "你已了解所有情况",
   "Icon": "图标",
+  "OAuth client icon": "OAuth client icon",
   "My App": "我的应用",
   "Tagline": "标识语",
   "A short description": "一个简短的描述",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} 个组被添加到此文档",
   "{{ count }} groups added to the document_plural": "{{ count }} 个组被添加到此文档",
   "Logo": "网站图标",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "归档文档集",
   "New doc": "新建文档",
   "Empty": "空",
   "Collapse": "收起",
   "Expand": "展开",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "不支持的文档类型 - 请用Markdown，纯文本，HTML或Word格式",
+  "Import files": "Import files",
   "Go back": "返回",
   "Go forward": "前进",
   "Could not load shared documents": "无法加载共享文档",
@@ -460,6 +466,8 @@
   "Replacement": "替换",
   "Replace": "替换",
   "Replace all": "全部替换",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "个人头像",
   "Create a new doc": "新建文档",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} 不会被通知，因为他们没有访问此文档的权限",
@@ -486,7 +494,8 @@
   "Create a new child doc": "创建一个新的子文档",
   "Delete table": "删除表格",
   "Delete file": "删除文件",
-  "Width x Height": "宽度 x 高度",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "下载文件",
   "Replace file": "替换文件",
   "Delete image": "删除图片",
@@ -680,6 +689,7 @@
   "only you": "仅你自己",
   "person": "人",
   "people": "用户",
+  "Document title": "Document title",
   "Last updated": "最后更新",
   "Type '/' to insert, or start writing…": "输入'/'来插入，或开始写...",
   "Hide contents": "隐藏内容",
@@ -924,6 +934,7 @@
   "Rotate secret": "轮换密钥",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "轮换客户端密钥将会使之前的密钥不再有效。请确保更新使用这些密钥的应用程序。",
   "Displayed to users when authorizing": "在授权时显示给用户",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "在授权时显示给用户的开发者信息",
   "Developer name": "开发者名称",
   "Developer URL": "开发者 URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "这些设置影响团队中每个人的工作区显示方式。",
   "Display": "显示",
   "The logo is displayed at the top left of the application.": "徽标显示在应用程序左上角。",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "工作区名称，通常与你的公司名称相同。",
   "Description": "描述",
   "A short description of your workspace.": "你工作区的简短描述。",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ timeAgo }} 由 {{ user }} 更新",
   "You created {{ timeAgo }}": "{{ timeAgo }} 由你创建",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} 由 {{ user }} 创建",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "加载数据时出错"
 }
